@@ -5,15 +5,16 @@ def keystoreProperties = new Properties()
 keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.0"
+    compileSdkVersion 32
+    buildToolsVersion "32.0.0"
     defaultConfig {
         applicationId "org.tlhInganHol.android.klingonassistant"
         // We are targeting only Marshmallow and above.
         minSdkVersion 23
+        // Can't increase to 32 because security changes will disable KWOTD.
         targetSdkVersion 30
-        versionCode 567
-        versionName "2022.06.22b"
+        versionCode 569
+        versionName "2022.08.12a"
     }
     buildTypes {
         release {
@@ -40,18 +41,17 @@ android {
 
 allprojects {
     repositories {
-        jcenter()
-        maven {
-            url "https://maven.google.com"
-        }
+        mavenCentral()
+        google()
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:28.0.0'
-    compile 'com.android.support:design:28.0.0'
-    compile 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'androidx.appcompat:appcompat:1.5.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.viewpager2:viewpager2:1.0.0'
+    implementation 'com.google.android.material:material:1.6.1'
 }
 
 task updateDatabase(type: Exec) {
