@@ -51,6 +51,7 @@
         <activity android:name=".KlingonAssistant"
                   android:label="@string/app_name"
                   android:theme="@style/AppTheme.NoActionBar"
+                  android:exported="true"
                   android:launchMode="standard">
 
             <intent-filter>
