@@ -193,7 +193,7 @@ public class KlingonContentDatabase {
 
   // This should be kept in sync with the version number in the data/VERSION
   // file used to generate the database which is bundled into the app.
-  private static final int BUNDLED_DATABASE_VERSION = 202206221;
+  private static final int BUNDLED_DATABASE_VERSION = 202208120;
 
   // Metadata about the installed database, and the updated database, if any.
   public static final String KEY_INSTALLED_DATABASE_VERSION = "installed_database_version";
@@ -209,7 +209,7 @@ public class KlingonContentDatabase {
   // the IDs of the first entry and one past the ID of the last non-hypothetical,
   // non-extended-canon entry in the database, respectively.
   private static final int ID_OF_FIRST_ENTRY = 10000;
-  private static final int ID_OF_FIRST_EXTRA_ENTRY = 15109;
+  private static final int ID_OF_FIRST_EXTRA_ENTRY = 15154;
 
   private final KlingonDatabaseOpenHelper mDatabaseOpenHelper;
   private static final HashMap<String, String> mColumnMap = buildColumnMap();
