@@ -8,7 +8,7 @@
     android:orientation="horizontal"
     android:fitsSystemWindows="true">
 
-    <android.support.design.widget.NavigationView
+    <com.google.android.material.navigation.NavigationView
         android:id="@+id/nav_view"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
