@@ -22,12 +22,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <android.support.v4.view.ViewPager
+    <androidx.viewpager.widget.ViewPager
         android:id="@+id/entry_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
-    <android.support.design.widget.TabLayout
+    <com.google.android.material.tabs.TabLayout
         android:id="@+id/entry_tab_dots"
         android:layout_alignParentBottom="true"
         android:layout_width="match_parent"
@@ -42,7 +42,7 @@
          Unfortunately, this means that when the button is disabled,
          it's not visually distinct, so we make it invisible
          programmatically. -->
-    <android.support.design.widget.BottomNavigationView
+    <com.google.android.material.bottomnavigation.BottomNavigationView
             android:id="@+id/bottom_navigation"
             android:background="@color/semitransparentBlack"
             android:layout_alignParentBottom="true"
